fix overflow

--- a/scr/assets/css/style.css
+++ b/scr/assets/css/style.css
@@ -536,7 +536,6 @@ header .page-container {
   overflow: visible;
 }
 .section-anime {
-  /* z-index: 99; */
   height: 100vh;
   margin: 0 auto;
   padding: 20px;
@@ -545,6 +544,7 @@ header .page-container {
 }
 
 .section-anime .display {
+  overflow: hidden;
   margin-bottom: 40px;
 }
 
